# hey-api-formkit

./: .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
.husky/: pre-commit
backend/demo/: .env  README.md  pyproject.toml
backend/demo/config/: asgi.py  urls.py  wsgi.py
backend/demo/config/settings/: base.py
backend/demo/core/: serializers.py
backend/demo/core/management/commands/: seed.py
example_project/backend/demo/config/: urls.py
example_project/backend/demo/core/: admin.py  apps.py  authentication.py  models.py  schema.py  serializers.py  urls.py  views.py
example_project/frontend/demo/: .oxlintrc.json  .prettierignore  eslint.config.ts  openapi-ts.config.ts  openapi.yaml  package-lock.json  package.json  vite.config.ts
example_project/frontend/demo/src/: App.vue  auth-token.ts  hey-api.ts  main.ts
frontend/demo/: README.md  env.d.ts  openapi-ts.config.ts  package-lock.json  package.json
frontend/demo/openapi-ts-plugin/: formkit.ts
frontend/demo/src/: App.vue  hey-api.ts  main.ts
frontend/demo/src/__tests__/: App.spec.ts
frontend/demo/src/api/: pagination.ts
frontend/demo/src/client/: formkit.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/demo/src/formkit/: apply-overrides.ts  openapi-to-formkit.ts
frontend/demo/src/router/: index.ts
frontend/demo/src/stores/: products.ts
src/: apply-overrides.ts  data-select.ts  index.ts  plugin.ts
src/__tests__/: apply-overrides.test.ts
(+43 files in other folders)
