[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "django-extensions (>=4.1,<5.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "^9.15.0"
isort = "^8.0.1"
pudb = "^2025.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
